Responsive design almost done, only missing fix in icon jumping around

--- a/CSS3/layout.css
+++ b/CSS3/layout.css
@@ -2,14 +2,15 @@
     --bg-color: #EDEFF0;
     --page-width: 60em;
     --sidebar-width: 20%;
+    --header-left-col: auto;
 }
 
 body {
-    width: var(--page-width);
+    max-width: var(--page-width);
     background-color: var(--bg-color);
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: auto var(--sidebar-width);
     grid-template-rows: auto auto auto auto;
 }
 
@@ -17,7 +18,7 @@ body > header {
     grid-column: 1 / span 2;
     grid-row: 1 / 1;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: var(--header-left-col) auto;
     grid-template-rows: auto auto;
     grid-gap: 0 0;
 }
@@ -46,6 +47,7 @@ body > header div#signup {
 aside {
     grid-column: 2 / span 1;
     grid-row: 2 / span 3;
+    transition: width 2s;
 }
 
 nav#menu {
