--- a/CSS3/style.css
+++ b/CSS3/style.css
@@ -18,6 +18,10 @@ nav#menu input, nav#menu label {
     display: none;
 }
 
+nav#menu {
+    background-color: var(--main-color-dark);
+}
+
 body > header {
     background-color: var(--main-color-1);
     color: white;
@@ -73,32 +77,35 @@ nav > ul > li {
 }
 
 nav > ul > li {
-    border-top: 5px solid black;
+    border-width: 0 0;
+    border-top-width: 5px;
+    border-style: solid;
+    border-color: black;
     padding: 1em;
 }
 
 nav > ul > li:nth-child(1) {
-    border-top-color: var(--section-color-1);
+    border-color: var(--section-color-1);
 }
 
 nav > ul > li:nth-child(2) {
-    border-top-color: var(--section-color-2);
+    border-color: var(--section-color-2);
 }
 
 nav > ul > li:nth-child(3) {
-    border-top-color: var(--section-color-3);
+    border-color: var(--section-color-3);
 }
 
 nav > ul > li:nth-child(4) {
-    border-top-color: var(--section-color-4);
+    border-color: var(--section-color-4);
 }
 
 nav > ul > li:nth-child(5) {
-    border-top-color: var(--section-color-5);
+    border-color: var(--section-color-5);
 }
 
 nav > ul > li:nth-child(6) {
-    border-top-color: var(--section-color-6);
+    border-color: var(--section-color-6);
 }
 
 aside#related {
